--- a/CaseStudyCucumber/pom.xml
+++ b/CaseStudyCucumber/pom.xml
@@ -1,18 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>cucumber</groupId>
-  <artifactId>cucumberartifact</artifactId>
+  <groupId>ibm.com</groupId>
+  <artifactId>CaseStudyCucumber</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>cucmberproject</name>
 
 <properties>
   <maven.compiler.source>1.8</maven.compiler.source>
   <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-
-<dependencies>
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
+  
+  <dependencies>
+  
+  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
@@ -25,14 +24,12 @@
     <scope>test</scope>
 </dependency>
 
- <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
     <version>4.2.2</version>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-java</artifactId>
@@ -45,9 +42,7 @@
     <version>6.9.1</version>
        <scope>test</scope>
 </dependency>
-
-
-
-</dependencies>
-
-</project>
+  
+  </dependencies>
+  
+  </project>
